[gd_scene load_steps=40 format=3 uid="uid://2n0c24fgvkqt"]

[ext_resource type="Script" path="res://enemies/spiderReal/spider.gd" id="1_xdb1w"]
[ext_resource type="Texture2D" uid="uid://8fdtkenejao3" path="res://enemies/spiderReal/spider idle-Sheet.png" id="3_e8sp7"]
[ext_resource type="Texture2D" uid="uid://dof5nmaakwt5d" path="res://enemies/spiderReal/spider death-Sheet.png" id="3_hb3cn"]
[ext_resource type="Texture2D" uid="uid://cu1st3sv6ww43" path="res://enemies/spiderReal/spider attack-Sheet.png" id="3_qg8gi"]
[ext_resource type="Texture2D" uid="uid://bwi5xkxqxk7fd" path="res://enemies/spiderReal/spider walk-Sheet.png" id="4_4nvgs"]
[ext_resource type="Texture2D" uid="uid://w02xwuefq6tr" path="res://enemies/spiderReal/spider web attack-Sheet.png" id="5_bimf8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oeh17"]
atlas = ExtResource("3_qg8gi")
region = Rect2(0, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmopb"]
atlas = ExtResource("3_qg8gi")
region = Rect2(240, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_miqnm"]
atlas = ExtResource("3_qg8gi")
region = Rect2(480, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_uckv7"]
atlas = ExtResource("3_qg8gi")
region = Rect2(720, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy4nx"]
atlas = ExtResource("3_qg8gi")
region = Rect2(960, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_07v40"]
atlas = ExtResource("3_qg8gi")
region = Rect2(1200, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jirc"]
atlas = ExtResource("3_qg8gi")
region = Rect2(1440, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3t13"]
atlas = ExtResource("3_hb3cn")
region = Rect2(0, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh7k6"]
atlas = ExtResource("3_hb3cn")
region = Rect2(240, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq1ai"]
atlas = ExtResource("3_hb3cn")
region = Rect2(480, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg8s1"]
atlas = ExtResource("3_hb3cn")
region = Rect2(720, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6uud"]
atlas = ExtResource("3_e8sp7")
region = Rect2(0, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp6x6"]
atlas = ExtResource("3_e8sp7")
region = Rect2(240, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_6imn8"]
atlas = ExtResource("3_e8sp7")
region = Rect2(480, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q8tb"]
atlas = ExtResource("3_e8sp7")
region = Rect2(720, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqda3"]
atlas = ExtResource("4_4nvgs")
region = Rect2(0, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya6c2"]
atlas = ExtResource("4_4nvgs")
region = Rect2(240, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uq4s"]
atlas = ExtResource("4_4nvgs")
region = Rect2(480, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_okg8y"]
atlas = ExtResource("4_4nvgs")
region = Rect2(720, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpd3c"]
atlas = ExtResource("4_4nvgs")
region = Rect2(960, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxoml"]
atlas = ExtResource("4_4nvgs")
region = Rect2(1200, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_gda7p"]
atlas = ExtResource("4_4nvgs")
region = Rect2(1440, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehpij"]
atlas = ExtResource("4_4nvgs")
region = Rect2(1680, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0x2k"]
atlas = ExtResource("4_4nvgs")
region = Rect2(1920, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwxbq"]
atlas = ExtResource("5_bimf8")
region = Rect2(0, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_0orv1"]
atlas = ExtResource("5_bimf8")
region = Rect2(240, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg6hq"]
atlas = ExtResource("5_bimf8")
region = Rect2(480, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcx7w"]
atlas = ExtResource("5_bimf8")
region = Rect2(720, 0, 240, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_sbpvn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeh17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmopb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miqnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uckv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy4nx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07v40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jirc")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3t13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh7k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq1ai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg8s1")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6uud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp6x6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6imn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q8tb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqda3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya6c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uq4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okg8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpd3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxoml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gda7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehpij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0x2k")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwxbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0orv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg6hq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcx7w")
}],
"loop": false,
"name": &"web",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d3tlb"]
size = Vector2(49.2958, 50.7042)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sxhdn"]
size = Vector2(191.203, 24.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ksm0e"]
size = Vector2(20, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xicbm"]
size = Vector2(22.5, 36)

[node name="Spider" type="RigidBody2D"]
mass = 5.59
gravity_scale = 2.162
lock_rotation = true
script = ExtResource("1_xdb1w")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." groups=["enemy"]]
scale = Vector2(0.8, 0.8)
polygon = PackedVector2Array(3.75, -11.25, 5, -2, -1, 5, -5, 3, -7.5, 1.25, -17.5, 1.25, -20, 5, -20, 18.75, 18, 19, 18, 13, 13, -2, 13.75, -11.25, 10, -13.75, 6.25, -13.75)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.188769, 0.2045)
sprite_frames = SubResource("SpriteFrames_sbpvn")
animation = &"attack"
frame = 6
frame_progress = 1.0

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -1)
scale = Vector2(0.71, 0.71)
shape = SubResource("RectangleShape2D_d3tlb")

[node name="FirePosRight" type="Marker2D" parent="."]
position = Vector2(22, -6)
gizmo_extents = 667.7

[node name="FirePosLeft" type="Marker2D" parent="."]
position = Vector2(-17, -4)
gizmo_extents = 667.7

[node name="left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="left"]
position = Vector2(-129, 0)
shape = SubResource("RectangleShape2D_sxhdn")

[node name="right" type="Area2D" parent="."]
position = Vector2(-309, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="right"]
position = Vector2(437.602, 1)
shape = SubResource("RectangleShape2D_sxhdn")

[node name="random_generator" type="Timer" parent="."]
wait_time = 1.147
autostart = true

[node name="attack right" type="Area2D" parent="."]
position = Vector2(1, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack right"]
position = Vector2(18, -1)
shape = SubResource("RectangleShape2D_ksm0e")

[node name="attack left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack left"]
position = Vector2(-17, -1)
shape = SubResource("RectangleShape2D_xicbm")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="left" to="." method="_on_left_body_entered"]
[connection signal="body_exited" from="left" to="." method="_on_left_body_exited"]
[connection signal="body_entered" from="right" to="." method="_on_right_body_entered"]
[connection signal="body_exited" from="right" to="." method="_on_right_body_exited"]
[connection signal="timeout" from="random_generator" to="." method="_on_random_generator_timeout"]
[connection signal="body_entered" from="attack right" to="." method="_on_attack_right_body_entered"]
[connection signal="body_exited" from="attack right" to="." method="_on_attack_right_body_exited"]
[connection signal="body_entered" from="attack left" to="." method="_on_attack_left_body_entered"]
[connection signal="body_exited" from="attack left" to="." method="_on_attack_left_body_exited"]
